--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
 black = "^21.12b0"
 
+[tool.poetry.scripts]
+matflow = 'matflow.cli.cli'
+
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.2.0"
