--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
           update_version_in_files(
               current_version='${{ env.cur_pre_tag }}'.lstrip('v'),
               new_version='${{ env.cur_tag }}'.lstrip('v'),
-              files=['pyproject.toml', 'hpcflow/_version.py'],
+              files=['pyproject.toml', 'matflow/_version.py'],
           )"
           cz bump
 
@@ -285,7 +285,7 @@ jobs:
         with:
           body_path: release-artifacts/CHANGELOG_increment/CHANGELOG_increment.md
           tag_name: ${{ needs.bump-version.outputs.new_tag_name }}
-          files: release-artifacts/hpcflow-*/*
+          files: release-artifacts/matflow-*/*
           prerelease: ${{ github.event.pull_request.base.ref == 'develop' }}
 
       - name: Release info
@@ -294,8 +294,8 @@ jobs:
           binaryYaml=$(python3 -c "
           from pathlib import Path
           out_yaml = ''
-          for i in Path('release-artifacts').glob('*/hpcflow*'):
-            out_yaml += str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}'
+          for i in Path('release-artifacts').glob('*/matflow*'):
+            out_yaml += str(i.name) + ': https://github.com/hpcflow/matflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}'
             out_yaml += f'/{str(i.name)}\n'
           print(out_yaml)
           ")
@@ -388,7 +388,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          repository: hpcflow/hpcflow.github.io
+          repository: hpcflow/matflow.io
           token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }}
 
       - run: |
