--- a/.github/workflows/vars.jsonc
+++ b/.github/workflows/vars.jsonc
@@ -1,4 +1,7 @@
 {
+    "org": "hpcflow",
+    "repo": "matflow-new",
+    "version_file": "matflow/_version.py",
     "release_branch": "main",
     "pre_release_branch": "develop",
     "bot_account_name": "hpcflow-actions",
@@ -8,5 +11,8 @@
     "PYPI_token_name": "TEST_PYPI", // as defined within the `secrets` context
     "PYPI_URL": "https://test.pypi.org/legacy/",
     "executable_name": "matflow",
-    "pyinstaller_package": "matflow/cli.py"
+    "pyinstaller_package": "matflow/cli.py",
+    "website_source_org": "hpcflow",
+    "website_source_repo": "matflow.io",
+    "website_source_token_name": "HPCFLOW_ACTIONS_TOKEN" // as defined within the `secrets` context: PAT of user who has push access and permission to bypass branch protection
 }
