--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
 hpcflow = {git = "https://github.com/hpcflow/hpcflow-new.git", rev = "develop"}
+pyinstaller = { version = "^4.10", optional = true}
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
@@ -25,6 +26,9 @@ Sphinx = "^4.4.0"
 pydata-sphinx-theme = "^0.8.0"
 sphinx-jinja = "^2.0.1"
 sphinx-copybutton = "^0.5.0"
+
+[tool.poetry.extras]
+pyinstaller = ["pyinstaller"]
 
 [tool.poetry.scripts]
 matflow = 'matflow.cli:cli'
