--- a/.github/workflows/vars.jsonc
+++ b/.github/workflows/vars.jsonc
@@ -13,6 +13,6 @@
     "executable_name": "matflow",
     "pyinstaller_package": "matflow/cli.py",
     "website_source_org": "hpcflow",
-    "website_source_repo": "matflow.io",
+    "website_source_repo": "docs.matflow.io",
     "website_source_token_name": "HPCFLOW_ACTIONS_TOKEN" // as defined within the `secrets` context: PAT of user who has push access and permission to bypass branch protection
 }
