--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
 pyinstaller = { version = "^4.10", optional = true}
-hpcflow-new = "^0.80.0-alpha.2"
+hpcflow-new = "^0.80.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
