--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,3 +30,7 @@ repos:
       - id: conventional-pre-commit
         stages: [commit-msg]
         args: [] # optional: list of Conventional Commits types to allow
+  - repo: https://github.com/python-poetry/poetry
+    rev: dca6ff2699a06c0217ed6d5a278fa3146e4136ff
+    hooks:
+      - id: poetry-check
