--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
 pyinstaller = { version = "^4.10", optional = true}
-hpcflow-new2 = "^0.2.0-alpha.2"
+hpcflow-new2 = { path = "../hpcflow-new", develop = true }
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
@@ -21,17 +21,17 @@ ipykernel = "^6.6.1"
 pytest = "^6.2.5"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
-black = "^21.12b0"
 Sphinx = "^4.4.0"
 pydata-sphinx-theme = "^0.8.0"
 sphinx-jinja = "^2.0.1"
 sphinx-copybutton = "^0.5.0"
+black = "^22.3.0"
 
 [tool.poetry.extras]
 pyinstaller = ["pyinstaller"]
 
 [tool.poetry.scripts]
-matflow = 'matflow.cli:cli'
+matflow = 'matflow.cli:MatFlow.CLI'
 
 [tool.commitizen]
 name = "cz_conventional_commits"
