--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
 pyinstaller = { version = "^4.10", optional = true}
-hpcflow-new2 = { path = "../hpcflow-new", develop = true }
+hpcflow-new2 = "^0.2.0-alpha.5"
+
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
